--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+        {
+            "type": "java",
+            "name": "Launch clientMain",
+            "request": "launch",
+            "mainClass": "Network.clientMain",
+            "projectName": "CreativeProject_a8f270d8"
+        },
+        {
+            "type": "java",
+            "name": "Launch ServerSystem",
+            "request": "launch",
+            "mainClass": "Network.ServerSystem",
+            "projectName": "CreativeProject_a8f270d8"
+        },
         {
             "type": "java",
             "name": "Launch Main",
